# watobs

./: .buildinfo  .gitignore  README.md  altimetry.html  api.html  genindex.html  getting_started.html  index.html  insitu.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: notebooks_test.yml  python-app.yml  python-publish.yml  scheduled_test.yml
_sources/: altimetry.md  api.md.txt  getting_started.md  getting_started.md.txt  index.rst  index.rst.txt
docs/: api.md  conf.py  getting_started.md  index.rst  insitu.md
images/logo/: watobs.eps
notebooks/: Altimetry_data.ipynb  CMEMS_in_situ_data.ipynb  CMEMS_overview_MOOD_validation.ipynb  DIMSFARM_example.ipynb  DMI_observations.ipynb  Download_NDBC.ipynb  README.md
tests/: test_altimetry_api.py  test_basic.py  test_datafarm.py  test_dmi_api.py
tests/data/: northsea.geojson
tests/notebooks/: test_notebooks.py
watobs/: __init__.py  altimetry.py  datafarm.py  dmi.py
