[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watobs"]

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
name = "watobs"
version = "0.1.1"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "matplotlib",
]

authors = [
  { name="Jesper Sandvig Mariegaard", email="jem@dhigroup.com" },
]
description = "Access water observation data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
  "black",
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
]

test = [
  "pytest",
  "pytest-cov",
  "mikeio",
]

notebooks = [
  "nbformat",
  "nbconvert",
  "jupyter",
  "folium",
  "rtree",
  "mapclassify",
  "geopandas",
  "xarray",
  "netcdf4",
  "NDBC",
]

[project.urls]
"Homepage" = "https://github.com/DHI/watobs"